Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57470

[macOS] Checkmark painted with QStyle::PE_IndicatorMenuCheckMark doesn't look correct

    XMLWordPrintable

Details

    • macOS
    • 0e810e27a5e5a6c2e244ca439fbdf4f4ccc5b3da

    Description

      Steps to reproduce the issue.

      1. Run attached test application
      2. Compare how check mark is painted with the "native" style and when painted with QStyle::PE_IndicatorMenuCheckMark

      Expected outcome:
      Check marks look the same

      Actual outcome:
      Check mark drawn with QStyle::PE_IndicatorMenuCheckMark looks distorted

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes